@@ -35,8 +35,7 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
-//                .cors(corsConfigurer -> corsConfigurer.configurationSource(corsConfigurationSource()))
-                .cors(AbstractHttpConfigurer::disable)
+                .cors(corsConfigurer -> corsConfigurer.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
                 .headers(AbstractHttpConfigurer::disable)
                 .formLogin(AbstractHttpConfigurer::disable)
@@ -65,20 +64,23 @@ public class SecurityConfig {
                 .build();
     }
 
-//     @Bean
-//     public CorsConfigurationSource corsConfigurationSource() {
-//         CorsConfiguration configuration = new CorsConfiguration();
-//         // configuration.setAllowedOrigins(Arrays.asList(allowedOrigin, "http://localhost:5173", "https://unrivaled-dusk-a77b11.netlify.app"));
-//         configuration.setAllowedOriginPatterns(List.of("*"));
-//         configuration.setAllowCredentials(true);
-//         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-//         configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
-//         configuration.setExposedHeaders(List.of("Access-Control-Allow-Origin", "Access-Control-Allow-Credentials", "Access-Control-Allow-Methods", "Access-Control-Allow-Headers"));
-//         configuration.setMaxAge(86400L);
+     @Bean
+     public CorsConfigurationSource corsConfigurationSource() {
+         CorsConfiguration configuration = new CorsConfiguration();
+         configuration.setAllowedOrigins(List.of(
+                 allowedOrigin,
+                 "http://localhost:5173",
+                 "https://unrivaled-dusk-a77b11.netlify.app"
+         ));
+         configuration.setAllowCredentials(true);
+         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+         configuration.setAllowedHeaders(List.of("*"));
+         configuration.setExposedHeaders(List.of("Authorization"));
+         configuration.setMaxAge(86400L);
 
-//         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//         source.registerCorsConfiguration("/**", configuration);
+         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+         source.registerCorsConfiguration("/**", configuration);
 
-//         return source;
-//     }
+         return source;
+     }
 }
